feat: Add evorunner
NOTE: Run fails on evosuite. Also, for this to compile (and make maven
happy, pull off the latest .jar from evosuite releases and put it inside
your .m2 directory because apparently maven central does not have that
version of evosuite).

--- a/astMod/justfile
+++ b/astMod/justfile
@@ -3,6 +3,7 @@ clean:
     # Assuming that resources folder is used.
     rm -rf ../Instrumented
     rm -rf /tmp/compiled*
+    mvn clean
 
 build:
     mvn clean package -DskipTests=true -Dmaven.skip.test
