--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,8 @@
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
         "org.eclipse.equinox.common-3.14.0.jar",
-        "org.eclipse.jdt.core-3.14.0.jar"
+        "org.eclipse.jdt.core-3.14.0.jar",
+        "/home/sandesh/Workspace/thesis/PoCs/AST/evosuite-shaded-1.2.1-SNAPSHOT.jar"
     ],
     "java.configuration.updateBuildConfiguration": "automatic"
 }
